; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_sockaddr.c_isc_sockaddr_equal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/extr_sockaddr.c_isc_sockaddr_equal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ISC_SOCKADDR_CMPADDR = common dso_local global i32 0, align 4
@ISC_SOCKADDR_CMPPORT = common dso_local global i32 0, align 4
@ISC_SOCKADDR_CMPSCOPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @isc_sockaddr_equal(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load i32, i32* @ISC_SOCKADDR_CMPADDR, align 4
  %8 = load i32, i32* @ISC_SOCKADDR_CMPPORT, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @ISC_SOCKADDR_CMPSCOPE, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @isc_sockaddr_compare(i32* %5, i32* %6, i32 %11)
  ret i32 %12
}

declare dso_local i32 @isc_sockaddr_compare(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
